# ddr-idservice

./: .gitignore  INSTALL  INSTALL.md  INSTALL.rst  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
conf/: gunicorn.conf  idservice.cfg  nginx-app.conf  nginx.conf  settings.py  supervisor.conf
idservice/: pytest.ini
idservice/idservice/: settings.py  urls.py  wsgi.py
idservice/noidminter/: admin.py  api.py  apps.py  models.py  permissions.py  pynoid.py  serializers.py  tests.py  urls.py  views.py
idservice/noidminter/migrations/: 0001_initial.py  0002_auto_20210706_1238.py
idservice/registrar/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
idservice/registrar/management/commands/: idimport.py
idservice/registrar/migrations/: 0001_initial.py  0002_auto_20160511_1451.py  0003_auto_20210701_1715.py
idservice/registrar/templates/rest_framework/: api.html  login.html
requirements/: _base.txt
